[package]
name = "serve"
version = "0.1.0"
authors = ["gocha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "0.1.42"

[profile.dev]
opt-level = 2
